--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -12,14 +12,21 @@
 
     <TextView
         android:id="@+id/name_view"
-        android:layout_width="300dp"
+        android:layout_width="150dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="TextView" />
 
+    <TextView
+        android:id="@+id/team_view"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_weight = "1"
+        android:text="TextView"/>
+
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
+        android:layout_width="15dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
