--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -6,27 +6,34 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/name_view"
-        android:layout_width="150dp"
+        android:layout_width="130dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="TextView" />
 
     <TextView
+        android:id="@+id/pos_view"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:layout_weight = "1"
+        android:text="TextView"/>
+
+    <TextView
         android:id="@+id/team_view"
-        android:layout_width="50dp"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
         android:layout_weight = "1"
         android:text="TextView"/>
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="15dp"
+        android:layout_width="10dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
