--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
 
 
     <FrameLayout
+        android:id="@+id/container_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <FrameLayout
         android:id="@+id/container_main"
         android:layout_width="match_parent"
         android:layout_height="320dp" />
