--- a/app/src/main/res/layout/compare_frag_layout.xml
+++ b/app/src/main/res/layout/compare_frag_layout.xml
@@ -2,56 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/date_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:text="TextView"/>
-
-    <TextView
-        android:id="@+id/opp_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:text="TextView"/>
-
-    <TextView
-        android:id="@+id/result_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:text="TextView"/>
 
     <TextView
         android:id="@+id/cmp_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
         android:maxLines="1"
         android:padding="8dp"
-        android:text="TextView"/>
-
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/patt_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -61,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -71,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -81,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"
@@ -92,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -102,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -112,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -122,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -132,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -142,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -152,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -162,7 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -172,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -182,7 +152,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
@@ -192,7 +162,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:maxLines="1"
         android:padding="8dp"
         android:text="TextView"/>
