--- a/app/src/main/res/layout/watch_list_frag.xml
+++ b/app/src/main/res/layout/watch_list_frag.xml
@@ -11,61 +11,53 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add QBs"
-        app:layout_constraintBottom_toTopOf="@+id/watchListRV"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/rush"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/rush"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
         android:text="ADD RBS"
-        app:layout_constraintBottom_toTopOf="@+id/watchListRV"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/receive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="add wrs"
-        app:layout_constraintBottom_toTopOf="@+id/watchListRV"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/rush"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/watchListRV"
-        android:layout_width="409dp"
-        android:layout_height="294dp"
-        android:layout_marginBottom="388dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass"
-        tools:listitem="@layout/item_player" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="61dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:text="remove"
-        app:layout_constraintBottom_toTopOf="@+id/watchListRV"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="8sp"
+        app:layout_constraintStart_toEndOf="@+id/compare"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/compare"
+        android:layout_width="74dp"
+        android:layout_height="48dp"
+        android:text="compare"
+        android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/receive"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/watchListRV"
+        android:layout_width="394dp"
+        android:layout_height="257dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pass"
+        tools:listitem="@layout/item_player" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
